--- a/JavaNullAndEmptyStringExample/build.gradle
+++ b/JavaNullAndEmptyStringExample/build.gradle
@@ -14,6 +14,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.openjdk.jol:jol-core:0.16'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
