--- a/jpashop/build.gradle
+++ b/jpashop/build.gradle
@@ -24,6 +24,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'junit:junit:4.13.1'
+
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6' // SQL 값을 출력해주는 외부 라이브러리
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
