--- a/jpashop/build.gradle
+++ b/jpashop/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'junit:junit:4.13.1'
 
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6' // SQL 값을 출력해주는 외부 라이브러리
