스프링 DB 1 - 데이터 접근 예외 직접 만들기:

--- a/jdbc/src/main/resources/application.properties
+++ b/jdbc/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:h2:tcp://localhost/~/Desktop/woonys_github/blog-code/jdbc
+spring.datasource.username=sa
+spring.datasource.password=
